Add Aria Labels to HTML

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" aria-label=" Interactive Map Area">
+      <!-- Element invisible/unpercievable to screenreders etc. -->
+      <div id="map" aria-hidden= 'true'></div>
     </section>
     <section>
       <div class="filter-options">
