--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container" aria-label=" Interactive Map Area">
+    <section id="map-container" aria-label="Interactive Map Area">
       <!-- Element invisible/unpercievable to screenreders etc. -->
       <div id="map" aria-hidden= 'true'></div>
     </section>
     <section>
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" tabindex="1" name="neighborhoods" onchange="updateRestaurants()">
+        <select id="neighborhoods-select" aria-label='Choose your neighborhood' tabindex="1" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select id="cuisines-select" tabindex="2" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
       </div>
