--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <select id="neighborhoods-select" aria-label='Choose your neighborhood' tabindex="1" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" tabindex="2" name="cuisines" onchange="updateRestaurants()">
+        <select id="cuisines-select" aria-label="Choose your cuisine" tabindex="2" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
       </div>
