Add Aria Labels

--- a/restaurant.html
+++ b/restaurant.html
@@ -33,8 +33,9 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" aria-label="Interactive map area">
+      <!-- Element invisible/unpercievable to screenreders etc. -->
+      <div id="map" aria-hidden="true"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
