--- a/restaurant.html
+++ b/restaurant.html
@@ -21,7 +21,7 @@
     <!-- Beginning nav -->
     <nav>
       <h1><a href="/" tabindex="-1">Restaurant Reviews</a></h1>
-    </nav>
+    </nav id='breadcrumb-nav'>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" >
       <li><a href="/" tabindex="1">Home</a></li>
