--- a/restaurant.html
+++ b/restaurant.html
@@ -26,7 +26,7 @@
         <li><a href="/" tabindex="1">Home</a></li>
       </ul>
       <!-- End breadcrumb -->
-    </nav id='breadcrumb-nav'>
+    </nav>
     <!-- End nav -->
   </header>
   <!-- End header -->
@@ -36,7 +36,7 @@
     <!-- Beginning map -->
     <section id="map-container" aria-label="Interactive map area">
       <!-- Element invisible/unpercievable to screenreders etc. -->
-      <div id="map" aria-hidden="true"></div>
+      <div id="map" role="application" aria-hidden="true"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
