--- a/restaurant.html
+++ b/restaurant.html
@@ -25,6 +25,7 @@
       <ul id="breadcrumb" >
         <li><a href="/" tabindex="1">Home</a></li>
       </ul>
+      <a href="#restaurant-container" class="skip-link">Skip the map</a>
       <!-- End breadcrumb -->
     </nav>
     <!-- End nav -->
