--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main id="maincontent">
     <section id="map-container" aria-label="Interactive Map Area">
       <!-- Element invisible/unpercievable to screenreders etc. -->
-      <div id="map" aria-hidden= 'true'></div>
+      <div id="map" role="application" aria-hidden= 'true'></div>
     </section>
     <section>
       <div class="filter-options">
